@@ -15,6 +15,8 @@
 
 https://github.com/oxidecomputer/steno/compare/v0.4.0\...HEAD[Full list of commits]
 
+* https://github.com/oxidecomputer/steno/pull/286[#286] Steno now more consistently logs events in a saga lifetime: create/restore, start running, finish running.
+
 == 0.4.0 (released 2023-05-25)
 
 https://github.com/oxidecomputer/steno/compare/v0.3.1\...v0.4.0[Full list of commits]
